# bu_ec527_strassen_matrix_multiplication

./: .gitignore  CMakeLists.txt  LICENSE  README.md  matrix.c  matrix.h  mmm.c  test_mmm.c  timer.c  timer.h
.github/: ci.yml
.github/workflows/: ci.yml
scripts/: check_format.sh
src/: main.c  matrix.c  matrix.h  mmm.c  mmm.h  strassen.c  strassen.h  strassen_in_place.c  strassen_in_place.h  strassen_simd.c  strassen_simd.h  test_mmm.c  timer.c  timer.h
tests/: compare_time.c  test_matrix.c  test_mmm.c  test_strassen.c  test_strassen_simd.c  test_timer.c
